--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     },
     "dependencies": {
         "@inertiajs/react": "^2.2.19",
+        "@studio-freight/lenis": "^1.0.42",
+        "gsap": "^3.13.0",
+        "parallax-js": "^3.1.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0"
     }
